--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -3181,20 +3181,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "OOちゃま､食後の紅茶をどうぞ…｡貴方のために用意した､とびきりの逸品ですのよ♪今日はわたくしのおもてなしで､心も体もゆっくりと休めて､英気を養ってくださいまし…♪",
-                        "comments_my_1": "高貴に､優雅に振舞いますわ",
-                        "comments_my_2": "櫻井の名に相応しい姿を…",
-                        "comments_my_3": "紅茶と一緒に､花の香りも…",
-                        "comments_my_4": "心ゆくまで､のんびりと｡今はここが､貴方の居場所ですのよ♪",
-                        "comments_my_max": "この景色も､わたくしの心も､OOちゃまのために…",
-                        "comments_work_1": "ﾚﾃﾞｨのたしなみ､ご覧あれ♪",
-                        "comments_work_2": "冷めないうちに召し上がって♪",
-                        "comments_work_3": "昔からお気に入りの景色ですの",
-                        "comments_work_4": "柔らかな日差し…｡わたくしたちを､優しく包むようですわね",
-                        "comments_work_max": "OOちゃまの素敵な笑顔が､何よりの宝物ですわ♪",
-                        "comments_work_love_up": "OOちゃまの休日に､最高の彩りを｡薔薇を添えて♪",
-                        "comments_live": "花の香りに誘われまして?",
-                        "comments_love_max": "今日という日は､わたくしにとっても素敵なものですわ｡OOちゃまと絆を深める幸せに､浸れるのですから…♪"
+                        "comment": "OO 쨔마, 식후 홍차를 부디…. 당신을 위해 준비한, 특출난 일품이에요♪ 오늘은 저의 대접으로, 마음도 몸도 느긋하게 쉬시고, 영기를 길러주시면 좋겠어요…♪",
+                        "comments_my_1": "고귀하게, 우아하게 행동할게요.",
+                        "comments_my_2": "사쿠라이의 이름에 걸맞은 모습을…",
+                        "comments_my_3": "홍차와 함께, 꽃의 향기도…",
+                        "comments_my_4": "흡족하실 때까지, 한가롭게. 오늘은 여기가, 당신의 거처예요♪",
+                        "comments_my_max": "이 경치도, 저의 마음도, OO 쨔마를 위해…",
+                        "comments_work_1": "레이디의 소양, 봐주시길♪",
+                        "comments_work_2": "식기 전에 드시길♪",
+                        "comments_work_3": "예전부터 마음에 드는 경치예요.",
+                        "comments_work_4": "부드러운 햇살…. 저희를, 상냥하게 감싸는 것 같네요.",
+                        "comments_work_max": "OO 쨔마의 근사한 미소가, 무엇보다도 보물이에요♪",
+                        "comments_work_love_up": "OO 쨔마의 휴일에, 최고의 채색을. 장미를 곁들여♪",
+                        "comments_live": "꽃향기에 이끌리시나요?",
+                        "comments_love_max": "오늘이란 날은, 제게 있어서도 근사한 거예요. OO 쨔마와 인연을 깊게 하는 행복에, 잠길 수 있으니까요…♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1449301/idolcomment.mp3",
@@ -3260,20 +3260,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "紳士淑女が舞い踊る､豪華絢爛なﾀﾞﾝｽﾎｰﾙ｡今日の主役はこのわたくしですわ! 皆さまの心に色とりどりの花を咲かせるような､ﾏﾄﾞﾓｱｾﾞﾙの優美なｽﾃｰｼﾞ…ごゆるりとお楽しみを♪ｳﾌ♪",
-                        "comments_my_1": "高貴に､優雅に振舞いますわ",
-                        "comments_my_2": "櫻井の名に相応しい姿を…",
-                        "comments_my_3": "ようこそ､桃華の舞踏会へ♪",
-                        "comments_my_4": "舞台を飾る芸術品は､どれも一流の物｡わたくしも､きっと…",
-                        "comments_my_max": "OOちゃまが育て､花咲かせた魅力…ご覧になって?",
-                        "comments_work_1": "ﾚﾃﾞｨのたしなみ､ご覧あれ♪",
-                        "comments_work_2": "冷めないうちに召し上がって♪",
-                        "comments_work_3": "拍手喝采に､胸が躍りますわ…!",
-                        "comments_work_4": "皆を楽しませることが演者の責務…そしてわたくしの望みです",
-                        "comments_work_max": "わたくしをさらに輝かせる､貴方の想い…視線と共に感じます",
-                        "comments_work_love_up": "わたくしを導くOOちゃまの優しい手…感じますわ",
-                        "comments_live": "お相手してくださる?",
-                        "comments_love_max": "幕が下りた後も､少しだけ…この煌びやかな舞台を楽しみたいですわ｡OOちゃまと二人だけの､小さな舞踏会を…♪"
+                        "comment": "신사숙녀가 흩날리듯 춤추는, 호화찬란한 댄스홀. 오늘의 주역은 이 저예요! 여러분의 마음에 각양각색의 꽃을 피울 수 있는, 마드무아젤의 우미한 스테이지… 편안히 즐기시길♪ 우후♪",
+                        "comments_my_1": "고귀하게, 우아하게 행동할게요.",
+                        "comments_my_2": "사쿠라이의 이름에 걸맞은 모습을…",
+                        "comments_my_3": "어서오세요, 모모카의 무도회에♪",
+                        "comments_my_4": "무대를 장식하는 예술품은, 어느 것이나 일류인 물건. 저도, 반드시…",
+                        "comments_my_max": "OO 쨔마께서 키우시고, 꽃피우신 매력… 봐주세요?",
+                        "comments_work_1": "레이디의 소양, 봐주시길♪",
+                        "comments_work_2": "식기 전에 드시길♪",
+                        "comments_work_3": "박수갈채에, 가슴이 뛰어요…!",
+                        "comments_work_4": "모두를 즐겁게 하는 게 출연자의 책무… 그리고 저의 소망이예요.",
+                        "comments_work_max": "저를 더욱 빛내는, 당신의 마음… 시선과 함께 느껴요.",
+                        "comments_work_love_up": "저를 이끄시는 OO 쨔마의 상냥한 손… 느껴져요.",
+                        "comments_live": "상대해주시겠어요?",
+                        "comments_love_max": "막이 내린 뒤에도, 조금만… 이 화려한 무대를 즐기고 싶어요. OO 쨔마와 두사람만의, 작은 무도회를…♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1549302/idolcomment.mp3",
@@ -3339,20 +3339,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "夢のような時間でしたね､OOちゃま｡今も胸が高鳴って､覚めたくなくて…きっと､この気持ちを名残惜しいと呼ぶのでしょう｡さぁ､未練のあるわたくしを連れ戻してください♪",
-                        "comments_my_1": "名残惜しまれる､お芝居を…!",
-                        "comments_my_2": "常に､学ばねばなりませんわね",
-                        "comments_my_3": "また観ましょう｡小指の､約束♪",
-                        "comments_my_4": "理想の演技…今のわたくしには､果てしなく遠いものです",
-                        "comments_my_max": "ごひいきの役者さんがいますの? あらあら､どなたなのかしら",
-                        "comments_work_1": "魔法の時間ですのよ｡うふふっ",
-                        "comments_work_2": "ここは､喜びが生まれる場所…",
-                        "comments_work_3": "優しい手を…なさっているのね",
-                        "comments_work_4": "ええ､『今は』遠いだけ｡でも､歩み続ければきっと…でしょう?",
-                        "comments_work_max": "次の公演では､わたくしをごひいきにさせてみせますわよ♪",
-                        "comments_work_love_up": "もっともっと､感想をお話しましょうね､OOちゃま♪",
-                        "comments_live": "どこへでもお連れになって",
-                        "comments_love_max": "ゆっくりと参りましょう､OOちゃま｡何もかもが名残惜しくて…舞台の夢も､拍手と歓声も､この手の温もりも…"
+                        "comment": "꿈같은 시간이었네요, OO 쨔마. 지금도 가슴이 고동쳐서, 깨고 싶지 않아서… 분명, 이런 감정을 헤어지기 아쉽다고 부르는 거겠죠. 자, 미련이 남은 저를 되돌려놓아 주세요♪",
+                        "comments_my_1": "헤어지기 아쉬운, 연극을…!",
+                        "comments_my_2": "항상, 배워두지 않으면 안되겠네요.",
+                        "comments_my_3": "또 관람하죠. 새끼손가락의, 약속♪",
+                        "comments_my_4": "이상의 연기… 지금의 제겐, 한없이 먼 거예요.",
+                        "comments_my_max": "특별히 좋아하시는 배우가 있어요? 어머어머, 어느 분일까요.",
+                        "comments_work_1": "마법의 시간이에요. 우후훗.",
+                        "comments_work_2": "여기는, 기쁨이 태어나는 장소…",
+                        "comments_work_3": "상냥한 손을… 하고 계시네요.",
+                        "comments_work_4": "네,『지금은』멀 뿐. 그래도, 계속 걸어간다면 분명… 그렇죠?",
+                        "comments_work_max": "다음 공연에선, 저를 특별히 좋아하시도록 만들어드릴게요♪",
+                        "comments_work_love_up": "좀더 좀더, 감상을 얘기하죠, OO 쨔마♪",
+                        "comments_live": "어디까지라도 동행해주시길.",
+                        "comments_love_max": "천천히 가죠, OO 쨔마. 모든 게 헤어지기 아쉬워서… 무대의 꿈도, 박수와 함성도, 이 손의 온기도…"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1453901/idolcomment.mp3",
@@ -3418,20 +3418,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "『ようこそ､ｱｶﾃﾞﾐｱへ｡あなた､きっと善き魔法使いになれますわよ｡これは､ﾒｲｶﾞｽ･ﾓﾓｶの予言♪』今日は皆さまに､歌ではなく呪文を届けましょう｡夢と希望で紡ぐ､とっておきの呪文を!",
-                        "comments_my_1": "名残惜しまれる､お芝居を…!",
-                        "comments_my_2": "常に､学ばねばなりませんわね",
-                        "comments_my_3": "わたくし､大魔法使いですの♪",
-                        "comments_my_4": "わたくしは願います｡どうか､この舞台が成功しますようにと",
-                        "comments_my_max": "OOちゃま､よろしくて? …えぇ､大丈夫♪やれますわ",
-                        "comments_work_1": "魔法の時間ですのよ｡うふふっ",
-                        "comments_work_2": "ここは､喜びが生まれる場所…",
-                        "comments_work_3": "『はい､ﾓﾓちゃん先生です♪』",
-                        "comments_work_4": "『考え､感じ､思い描くのです…あなたの夢､あなたの理想を』",
-                        "comments_work_max": "呪文はﾊﾋﾟﾈｽ･ｷｭｰﾃｨｰ･ﾋﾟｰﾁﾌﾞﾛｯｻﾑ! 手を取り合って､ご一緒に♪",
-                        "comments_work_love_up": "『あなたと巡り会えたこと｡それが､一番大切な魔法です』",
-                        "comments_live": "ﾓﾓｶｽﾞ･ｱﾙﾃｨﾒｲﾄ･ﾒﾃｵ･ｽｳｫｰﾑ!",
-                        "comments_love_max": "魔法は永遠? たとえ消えても､幕が上がれば…ほら! OOちゃま､ご覧になって! わたくしが誇る､魔法の全てを!"
+                        "comment": "『어서오세요, 아카데미아에. 당신, 분명 좋은 마법사가 될 수 있어요. 이건, 메이거스･모모카의 예언♪』오늘은 여러분께, 노래가 아닌 주문을 전하죠. 꿈과 희망으로 자아낸, 소중히 간직해둔 주문을!",
+                        "comments_my_1": "헤어지기 아쉬운, 연극을…!",
+                        "comments_my_2": "항상, 배워두지 않으면 안되겠네요.",
+                        "comments_my_3": "저, 대마법사예요♪",
+                        "comments_my_4": "저는 기원하겠어요. 부디, 이 무대가 성공했으면 하고.",
+                        "comments_my_max": "OO 쨔마, 괜찮냐구요? …네, 괜찮아요♪ 할 수 있어요.",
+                        "comments_work_1": "마법의 시간이에요. 우후훗.",
+                        "comments_work_2": "여기는, 기쁨이 태어나는 장소…",
+                        "comments_work_3": "『네, 모모 쨩 선생님이에요♪』",
+                        "comments_work_4": "『생각, 느낌, 마음을 그리는 거예요… 당신의 꿈, 당신의 이상을.』",
+                        "comments_work_max": "주문은 해피니스･큐티･피치 블로섬! 손을 맞잡고, 함께♪",
+                        "comments_work_love_up": "『당신과 뜻밖에 만날 수 있었던 것. 그게, 가장 중요한 마법이에요.』",
+                        "comments_live": "모모카즈･얼티메이트･메테오･스웜!",
+                        "comments_love_max": "마법은 영원? 만약 스러지더라도, 막이 오르면… 자! OO 쨔마, 보시길! 제가 자랑하는, 마법의 전부를!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1553902/idolcomment.mp3",
