--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -3339,8 +3339,8 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "꿈같은 시간이었네요, OO 쨔마. 지금도 가슴이 고동쳐서, 깨고 싶지 않아서… 분명, 이런 감정을 헤어지기 아쉽다고 부르는 거겠죠. 자, 미련이 남은 저를 되돌려놓아 주세요♪",
-                        "comments_my_1": "헤어지기 아쉬운, 연극을…!",
+                        "comment": "꿈같은 시간이었네요, OO 쨔마. 지금도 가슴이 고동쳐서, 깨고 싶지 않아서… 분명, 이런 감정을 이별이 아쉽다고 부르는 거겠죠. 자, 미련이 남은 저를 되돌려놓아 주세요♪",
+                        "comments_my_1": "이별이 아쉬운, 연극을…!",
                         "comments_my_2": "항상, 배워두지 않으면 안되겠네요.",
                         "comments_my_3": "또 관람하죠. 새끼손가락의, 약속♪",
                         "comments_my_4": "이상의 연기… 지금의 제겐, 한없이 먼 거예요.",
@@ -3352,7 +3352,7 @@ kg
                         "comments_work_max": "다음 공연에선, 저를 특별히 좋아하시도록 만들어드릴게요♪",
                         "comments_work_love_up": "좀더 좀더, 감상을 얘기하죠, OO 쨔마♪",
                         "comments_live": "어디까지라도 동행해주시길.",
-                        "comments_love_max": "천천히 가죠, OO 쨔마. 모든 게 헤어지기 아쉬워서… 무대의 꿈도, 박수와 함성도, 이 손의 온기도…"
+                        "comments_love_max": "천천히 가죠, OO 쨔마. 모든 게 이별이 아쉬워서… 무대의 꿈도, 박수와 함성도, 이 손의 온기도…"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1453901/idolcomment.mp3",
@@ -3419,7 +3419,7 @@ kg
                     },
                     "comments": {
                         "comment": "『어서오세요, 아카데미아에. 당신, 분명 좋은 마법사가 될 수 있어요. 이건, 메이거스･모모카의 예언♪』오늘은 여러분께, 노래가 아닌 주문을 전하죠. 꿈과 희망으로 자아낸, 소중히 간직해둔 주문을!",
-                        "comments_my_1": "헤어지기 아쉬운, 연극을…!",
+                        "comments_my_1": "이별이 아쉬운, 연극을…!",
                         "comments_my_2": "항상, 배워두지 않으면 안되겠네요.",
                         "comments_my_3": "저, 대마법사예요♪",
                         "comments_my_4": "저는 기원하겠어요. 부디, 이 무대가 성공했으면 하고.",
