--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -3503,20 +3503,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "ふぅ…神戸の街は坂道が多いけれど､ﾄﾚｰﾆﾝｸﾞに適しているでしょう? ふふっ､ご心配には及びませんわ｡毎日通ったｺｰｽですもの､慣れ親しんでいますわ｡参りましょう､OOちゃま!",
-                        "comments_my_1": "あら､意外そうなお顔ですわね",
-                        "comments_my_2": "もっともっと磨きをかけますわ",
-                        "comments_my_3": "走るのは､楽しい日課ですの",
-                        "comments_my_4": "向こうにいるのは…お隣のﾜﾝちゃんですわ! ごきげんよう♪",
-                        "comments_my_max": "気合いは十分ですわ｡あなたにいいところを見せたくって!",
-                        "comments_work_1": "自分には負けたくありませんの",
-                        "comments_work_2": "さぁ､本番はここからですのよ!",
-                        "comments_work_3": "努力の成果､ご覧になって",
-                        "comments_work_4": "大丈夫､迷いはしませんわ｡何百回も走っている道ですもの!",
-                        "comments_work_max": "OOちゃまに相応しくありたい｡その一心ですの",
-                        "comments_work_love_up": "OOちゃまは…ふふっ､まだまだ爽やかですわね♪",
-                        "comments_live": "本気で参りますわ!",
-                        "comments_love_max": "小さいからといって､甘く見ないでくださいまし｡でも…走り終えたら､たっぷり褒めてくださいね､OOちゃま♪"
+                        "comment": "후우… 고베의 거리는 언덕길이 많긴 하지만, 트레이닝엔 알맞죠? 후훗, 걱정하실 것 없어요. 매일 다닌 코스인 걸요, 익숙해져 있어요. 가보죠, OO 쨔마!",
+                        "comments_my_1": "어머, 의외라는 듯한 얼굴이시네요.",
+                        "comments_my_2": "좀더 좀더 갈고닦을게요.",
+                        "comments_my_3": "달리는 건, 즐거운 일과예요.",
+                        "comments_my_4": "저기 있는 건… 이웃집의 멍멍이예요! 안녕하신지요♪",
+                        "comments_my_max": "기합은 충분해요. 당신께 좋은 모습을 보여주고 싶어서요!",
+                        "comments_work_1": "자신에겐 지고 싶지 않아요.",
+                        "comments_work_2": "자, 본방은 지금부터예요!",
+                        "comments_work_3": "노력의 성과, 지켜봐주시길",
+                        "comments_work_4": "괜찮아요, 헤매지는 않아요. 몇백 번이고 달리고 있는 길인 걸요!",
+                        "comments_work_max": "OO 쨔마께 걸맞게 있고 싶어. 그 일념이에요.",
+                        "comments_work_love_up": "OO 쨔마는… 후후, 아직 산뜻하시네요♪",
+                        "comments_live": "진심으로 갈게요!",
+                        "comments_love_max": "작다고 해서, 가볍게 보지 말아주시면 좋겠어요. 그래도… 달리기 끝나면, 잔뜩 칭찬해주세요, OO 쨔마♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1457601/idolcomment.mp3",
@@ -3583,20 +3583,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "幾多の光が交差する､都会の夜…自分もその一つに過ぎない､そう思って俯くなんて……そんなの退屈ですわ｡誰にも遠慮する必要なんてありませんわ｡誰よりも強く､自由に輝きましょう!",
-                        "comments_my_1": "あら､意外そうなお顔ですわね",
-                        "comments_my_2": "もっともっと磨きをかけますわ",
-                        "comments_my_3": "ん…夜風が心地良いですわね",
-                        "comments_my_4": "女性にはいくつもの顔がありますの｡騙されないよう､ご注意を",
-                        "comments_my_max": "OOちゃま｡ちょっぴり悪な桃華は､お嫌いですか?",
-                        "comments_work_1": "自分には負けたくありませんの",
-                        "comments_work_2": "さぁ､本番はここからですのよ!",
-                        "comments_work_3": "存分に見惚れてくださいまし",
-                        "comments_work_4": "不安? ふふっ､ご冗談を｡どんな挑戦だって受けて立ちますわ!",
-                        "comments_work_max": "自信があって当然ですわ｡OOちゃまのｱｲﾄﾞﾙです",
-                        "comments_work_love_up": "OOちゃま､ﾄﾞｷﾄﾞｷしますの? そう…思惑通りですわ",
-                        "comments_live": "わたくしに敵うと思って?",
-                        "comments_love_max": "ご心配なさらないで｡どんな装いでも､わたくしはわたくし…OOちゃまを慕う､ひとりの女の子ですから｡ねっ♪"
+                        "comment": "수많은 빛이 교차하는, 도시의 밤… 자신도 그 중 하나에 지나지 않아, 그렇게 생각해 고개숙이다니…… 그런 건 따분해요. 누구에게도 겸손할 필요 없어요. 누구보다도 강하고, 자유롭게 빛나죠!",
+                        "comments_my_1": "어머, 의외라는 듯한 얼굴이시네요.",
+                        "comments_my_2": "좀더 좀더 갈고닦을게요.",
+                        "comments_my_3": "음… 밤바람이 기분 좋네요.",
+                        "comments_my_4": "여성에겐 여러 얼굴이 있어요. 속지 않도록, 주의를.",
+                        "comments_my_max": "OO 쨔마. 조금 나쁜 모모카는, 싫으신가요?",
+                        "comments_work_1": "자신에겐 지고 싶지 않아요.",
+                        "comments_work_2": "자, 본방은 지금부터예요!",
+                        "comments_work_3": "마음껏 넋을 잃고 바라봐주시면 좋겠어요.",
+                        "comments_work_4": "불안? 후훗, 농담도. 어떤 도전이라도 받아낼게요!",
+                        "comments_work_max": "자신있는 게 당연해요. OO 쨔마의 아이돌이에요.",
+                        "comments_work_love_up": "OO 쨔마, 두근두근하시나요? 그래요… 기대한 대로예요.",
+                        "comments_live": "저를 당해낼 수 있다고 생각하시는지?",
+                        "comments_love_max": "걱정하지 마세요. 어떤 옷차림이어도, 저는 저… OO 쨔마를 사모하는, 한 사람의 여자아이니까. 요♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1557602/idolcomment.mp3",
@@ -3662,20 +3662,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "うふふっ､書けましたわ♪さぁ､召し上がって｡この薔薇色のﾒｯｾｰｼﾞが､他の方に気づかれないうちに｡なぜって､わたくしの気持ちは､OOちゃまだけが知るものなのですから♪",
-                        "comments_my_1": "特別な時間をご提供しますわ♪",
-                        "comments_my_2": "見つめられると緊張しますわね",
-                        "comments_my_3": "美味しくなぁれ…うふふ♪",
-                        "comments_my_4": "お食事は､味わうだけでなく､楽しむものでもありますのよ♪",
-                        "comments_my_max": "ﾒｯｾｰｼﾞに込めた想いは､OOちゃまだけのものですわ",
-                        "comments_work_1": "精一杯お勤めいたしますわ♪",
-                        "comments_work_2": "お給仕は､真心を込めて…",
-                        "comments_work_3": "ﾄﾞｷﾄﾞｷしてくださいまし♪",
-                        "comments_work_4": "英語の勉強だって､苦ではありませんわ｡とても楽しくってよ♪",
-                        "comments_work_max": "ｷﾚｲに書けましたの! OOちゃま､残さず召し上がれ♪",
-                        "comments_work_love_up": "OOちゃまのくつろぎのひと時に､彩りを添えますわ!",
-                        "comments_live": "特別ｻｰﾋﾞｽですのよ!",
-                        "comments_love_max": "Love for …このあとに続く文字は､OOちゃまとわたくしだけの秘密ですわ｡答えはほら､わたくしの目の前に…♪"
+                        "comment": "우후훗, 썼어요♪ 자, 드셔주시길. 이 장밋빛 메시지가, 다른 분께 눈치채이기 전에. 왜냐면, 제 마음은, OO 쨔마만이 아는 거니까요♪",
+                        "comments_my_1": "특별한 시간을 제공할게요♪",
+                        "comments_my_2": "주시되고 있으면 긴장되네요.",
+                        "comments_my_3": "맛있어져라… 우후후♪",
+                        "comments_my_4": "식사는, 맛보는 것만이 아닌, 즐기는 것이기도 해요♪",
+                        "comments_my_max": "메시지에 담은 생각은, OO 쨔마만의 것이에요.",
+                        "comments_work_1": "힘껏 종사할게요♪",
+                        "comments_work_2": "식사 시중은, 진심을 담아서…",
+                        "comments_work_3": "두근두근거려주시면 좋겠어요♪",
+                        "comments_work_4": "영어 공부도, 힘든 건 없어요. 너무 즐거워서요♪",
+                        "comments_work_max": "예쁘게 써졌어요! OO 쨔마, 남김 없이 드시길♪",
+                        "comments_work_love_up": "OO 쨔마의 느긋한 한때에, 색채를 더할게요!",
+                        "comments_live": "특별 서비스예요!",
+                        "comments_love_max": "Love for …이 뒤에 이어질 문자는, OO 쨔마와 저만의 비밀이에요. 답은 자, 제 눈앞에…♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1462201/idolcomment.mp3",
@@ -3742,20 +3742,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "お待たせいたしました♪お茶をお持ちしましたわ｡お疲れ気味のご主人様に､桃華特製のﾆﾙｷﾞﾘをお淹れしますね｡…まぁ､わたくしもご一緒してよろしいんですの? では､お言葉に甘えて…♪",
-                        "comments_my_1": "特別な時間をご提供しますわ♪",
-                        "comments_my_2": "見つめられると緊張しますわね",
-                        "comments_my_3": "うふふっ､いい香りでしょう?",
-                        "comments_my_4": "座っていらして? すべてわたくしがご用意して差し上げます♪",
-                        "comments_my_max": "OOちゃまのﾒｲﾄﾞはわたくしだけです｡よろしくって?",
-                        "comments_work_1": "精一杯お勤めいたしますわ♪",
-                        "comments_work_2": "お給仕は､真心を込めて…",
-                        "comments_work_3": "ふたりきりのお茶会ですわね",
-                        "comments_work_4": "お作法も学びましたわ♪素敵なﾚﾃﾞｨになるための嗜みですもの",
-                        "comments_work_max": "OOちゃまのお世話は､わたくしの喜びですから♪",
-                        "comments_work_love_up": "どの茶葉だったら喜んでいただけるか､一生懸命考えましたの",
-                        "comments_live": "どうぞﾘﾗｯｸｽなさって♪",
-                        "comments_love_max": "本場英国で紅茶を学ぶのもいいですわね…｡OOちゃまに美味しいお茶を淹れるためですもの｡努力は当然ですわ♪"
+                        "comment": "오래 기다리셨어요♪ 차를 가져왔어요. 피곤한 기색인 주인님께, 모모카 특제 닐기리를 달여드릴게요. …어머, 저도 함께해도 괜찮은가요? 그럼, 사양하지 않고…♪",
+                        "comments_my_1": "특별한 시간을 제공할게요♪",
+                        "comments_my_2": "주시되고 있으면 긴장되네요.",
+                        "comments_my_3": "우후훗, 좋은 향기죠?",
+                        "comments_my_4": "앉아 계셔요? 전부 제가 준비해 드릴게요♪",
+                        "comments_my_max": "OO 쨔마의 메이드는 저뿐이에요. 잘 부탁한다구요?",
+                        "comments_work_1": "힘껏 종사할게요♪",
+                        "comments_work_2": "식사 시중은, 진심을 담아서…",
+                        "comments_work_3": "두사람만의 다과회네요.",
+                        "comments_work_4": "예법도 배웠어요♪ 근사한 레이디가 되기 위한 소양이에요.",
+                        "comments_work_max": "OO 쨔마의 시중들기는, 제 기쁨이니까요♪",
+                        "comments_work_love_up": "어떤 찻잎이면 기뻐해 주실까, 정말 열심히 고민했어요.",
+                        "comments_live": "부디 릴렉스하시길♪",
+                        "comments_love_max": "본고장 영국에서 홍차를 배우는 것도 좋겠네요…. OO 쨔마께 맛있는 차를 내드리기 위해서인 걸요. 노력은 당연해요♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/idolcomment.mp3",
