--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -3817,7 +3817,7 @@ kg
                     }
                 }, {
                     "story_id": "380",
-                    "story_title": "ブルーミングシャイン",
+                    "story_title": "블루밍 샤인",
                     "voice_enable": ["1", "1"],
                     "flash_path": ["../../idol_story/movie_play/380/1_k.html", 
                                    "../../idol_story/movie_play/380/2_k.html"],
@@ -3830,7 +3830,7 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"]
                 }, {
                     "story_id": "303",
-                    "story_title": "アフタヌーンローズ",
+                    "story_title": "애프터눈 로즈",
                     "voice_enable": ["1", "1"],
                     "flash_path": ["../../idol_story/movie_play/303/1_k.html", 
                                    "../../idol_story/movie_play/303/2_k.html"],
