--- a/mypage.html
+++ b/mypage.html
@@ -480,27 +480,27 @@
             idolArr['def'] = [];
             var icount = new ICount(now_time);
             idolArr['atk'][0] = [];
-            idolArr['atk'][0]['img_path'] = 'image_sp/card/ls/fumika_06.jpg';
-            idolArr['atk'][0]['img_path_large'] = 'image_sp/card/quest/fumika_06.jpg';
+            idolArr['atk'][0]['img_path'] = 'image_sp/card/ls/fumika_05.jpg';
+            idolArr['atk'][0]['img_path_large'] = 'image_sp/card/quest/fumika_05.jpg';
             idolArr['atk'][0]['cost'] = '19';
             idolArr['atk'][0]['attribute'] = '2';
             idolArr['atk'][0]['attribute'] = '2';
             idolArr['atk'][0]['attribute_str'] = 'cool';
             idolArr['atk'][0]['rarity'] = '6';
             idolArr['atk'][0]['comment_column_num'] = '5';
-            idolArr['atk'][0]['card_comment'] = "…이미지 쇄신입니다. …OO씨의 손으로… 단장도 새롭게.";
-            idolArr['atk'][0]['voice_path'] = 'sound/2512002/my_max.mp3';
+            idolArr['atk'][0]['card_comment'] = "…떨어트린 책의 먼지까지… 털어 주시는, 좋은 사람이네요.";
+            idolArr['atk'][0]['voice_path'] = 'sound/2412001/my_max.mp3';
             idolArr['atk'][1] = [];
-            idolArr['atk'][1]['img_path'] = 'image_sp/card/ls/fumika_09.jpg';
-            idolArr['atk'][1]['img_path_large'] = 'image_sp/card/quest/fumika_09.jpg';
+            idolArr['atk'][1]['img_path'] = 'image_sp/card/ls/fumika_21.jpg';
+            idolArr['atk'][1]['img_path_large'] = 'image_sp/card/quest/fumika_21.jpg';
             idolArr['atk'][1]['cost'] = '20';
             idolArr['atk'][1]['attribute'] = '2';
             idolArr['atk'][1]['attribute'] = '2';
             idolArr['atk'][1]['attribute_str'] = 'cool';
             idolArr['atk'][1]['rarity'] = '5';
             idolArr['atk'][1]['comment_column_num'] = '5';
-            idolArr['atk'][1]['card_comment'] = "…저도, 발렌타인을 의식해서… 아뇨, 보낼 상대 따위, 저에게는.";
-            idolArr['atk'][1]['voice_path'] = 'sound/2421201/my_max.mp3';
+            idolArr['atk'][1]['card_comment'] = "…당신도, 액자에 장식되어 보시겠습니까. …괜찮으시다면, 둘이서.";
+            idolArr['atk'][1]['voice_path'] = 'sound/2440501/my_max.mp3';
             idolArr['atk'][2] = [];
             idolArr['atk'][2]['img_path'] = 'image_sp/card/ls/fumika_01.jpg';
             idolArr['atk'][2]['img_path_large'] = 'image_sp/card/quest/fumika_01.png';
@@ -513,27 +513,27 @@
             idolArr['atk'][2]['card_comment'] = "………만약… 아이돌이 된다면, 무언가 바뀔까요? …저도.";
             idolArr['atk'][2]['voice_path'] = 'sound/2002601/my_max.mp3';
             idolArr['atk'][3] = [];
-            idolArr['atk'][3]['img_path'] = 'image_sp/card/ls/fumika_05.jpg';
-            idolArr['atk'][3]['img_path_large'] = 'image_sp/card/quest/fumika_05.jpg';
+            idolArr['atk'][3]['img_path'] = 'image_sp/card/ls/fumika_37.jpg';
+            idolArr['atk'][3]['img_path_large'] = 'image_sp/card/quest/fumika_37.jpg';
             idolArr['atk'][3]['cost'] = '19';
             idolArr['atk'][3]['attribute'] = '2';
             idolArr['atk'][3]['attribute'] = '2';
             idolArr['atk'][3]['attribute_str'] = 'cool';
             idolArr['atk'][3]['rarity'] = '5';
             idolArr['atk'][3]['comment_column_num'] = '2';
-            idolArr['atk'][3]['card_comment'] = "…떨어트린 책의 먼지까지… 털어 주시는, 좋은 사람이네요.";
-            idolArr['atk'][3]['voice_path'] = 'sound/2412001/my_max.mp3';
+            idolArr['atk'][3]['card_comment'] = "후후… OO 씨와 지내는 동안에, 미소도 늘었습니다.";
+            idolArr['atk'][3]['voice_path'] = 'sound/2467001/my_max.mp3';
             idolArr['atk'][4] = [];
-            idolArr['atk'][4]['img_path'] = 'image_sp/card/ls/fumika_07.jpg';
-            idolArr['atk'][4]['img_path_large'] = 'image_sp/card/quest/fumika_07.jpg';
+            idolArr['atk'][4]['img_path'] = 'image_sp/card/ls/fumika_17.jpg';
+            idolArr['atk'][4]['img_path_large'] = 'image_sp/card/quest/fumika_17.jpg';
             idolArr['atk'][4]['rarity'] = '5';
             idolArr['atk'][4]['cost'] = '20';
             idolArr['atk'][4]['attribute'] = '2';
             idolArr['atk'][4]['attribute'] = '2';
             idolArr['atk'][4]['attribute_str'] = 'cool';
             idolArr['atk'][4]['comment_column_num'] = '5';
-            idolArr['atk'][4]['card_comment'] = "…프로듀서 씨가 저를 보고 계실 때, 저도 보고 있습니다… 당신을.";
-            idolArr['atk'][4]['voice_path'] = 'sound/2416501/my_max.mp3';
+            idolArr['atk'][4]['card_comment'] = "오늘은, 쌀쌀하네요… 조금 더 가까이 있으면 된다, 구요? …네.";
+            idolArr['atk'][4]['voice_path'] = 'sound/2436301/my_max.mp3';
             idolArr['def'][0] = [];
             idolArr['def'][0]['img_path'] = 'image_sp/card/ls/fumika_06.jpg';
             idolArr['def'][0]['img_path_large'] = 'image_sp/card/quest/fumika_06.jpg';
