--- a/idol_gallery/idol_detail/fumika_k.html
+++ b/idol_gallery/idol_detail/fumika_k.html
@@ -3714,10 +3714,10 @@ kg
                     "story_id": "258",
                     "story_title": "성야의 등화",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["../../idol_story/movie_play/258/1_k",
-                                   "../../idol_story/movie_play/258/2_k"],
-                    "voice_url": ["../../idol_story/sound_play/258/1_k",
-                                  "../../idol_story/sound_play/258/2_k"],
+                    "flash_path": ["../../idol_story/movie_play/258/1_k.html",
+                                   "../../idol_story/movie_play/258/2_k.html"],
+                    "voice_url": ["../../idol_story/sound_play/258/1_k.html",
+                                  "../../idol_story/sound_play/258/2_k.html"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/base/089.jpg",
                              "../../image_sp/ui/episode/epi_button_movie_258_2.jpg"],
