--- a/idol_story/movie_play/180/2_k.html
+++ b/idol_story/movie_play/180/2_k.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href='../../../css/game/pex.css' media="all">
     <script src='../../../js/jquery-1.9.1.min.js'></script>
-    <script src='../../../js/pex-1.2.0-furiousjhin.js'></script>
+    <script src='../../../js/pex-1.2.0-NanumSquare.js'></script>
     <script src='../../../js/pex_common.js'></script>
     <title>ｱｲﾄﾞﾙﾏｽﾀｰ ｼﾝﾃﾞﾚﾗｶﾞｰﾙｽﾞ </title>
     <style>
@@ -139,7 +139,7 @@
             container.style.marginTop = (marginTop) + "px";
             container.style.zoom = "50%";
             container.style.height = (window.outerHeight * 2 - marginTop) + "px";
-            var pex = new Pex('180_2.swf', "container", option);
+            var pex = new Pex('180_2_k.swf', "container", option);
             pex.getAPI().ready(function() {
                 setScrollTop();
             });
