--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -3844,7 +3844,7 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"]
                 }, {
                     "story_id": "263",
-                    "story_title": "綿雪の戯れ",
+                    "story_title": "함박눈의 장난",
                     "voice_enable": ["1", "1"],
                     "flash_path": ["../../idol_story/movie_play/263/1_k.html", 
                                    "../../idol_story/movie_play/263/2_k.html"],
@@ -3857,7 +3857,7 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"]
                 }, {
                     "story_id": "227",
-                    "story_title": "ひと夏の華",
+                    "story_title": "한여름의 꽃",
                     "voice_enable": ["1", "1"],
                     "flash_path": ["../../idol_story/movie_play/227/1_k.html", 
                                    "../../idol_story/movie_play/227/2_k.html"],
@@ -3883,7 +3883,7 @@ kg
                                    "../../image_sp/ui/episode/epi_button_moviename_r_late.png"]
                 }, {
                     "story_id": "150",
-                    "story_title": "大はしゃぎ!夏のスクールプール",
+                    "story_title": "신바람나다! 여름의 스쿨 풀",
                     "voice_enable": {
                         "1": "1",
                         "4": "1"
