--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -3870,7 +3870,7 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cute_late.png"]
                 }, {
                     "story_id": "190",
-                    "story_title": "新春☆開運招福",
+                    "story_title": "新春☆開運招福(지원불가)",
                     "voice_enable": ["0", "0"],
                     "flash_path": ["../../idol_story/movie_play/190/1_k.html", 
                                    "../../idol_story/movie_play/190/2_k.html"],
